--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     </p>
     <hr>
     <h2>Дескрипторы физического форматирования</h2>
-    <tt><b>&#060;p&#062;</b>(Paragraph)</tt> &#8212; парный блочный дискриптор, который показывает начало и конец абзаца.<br>
-    <tt><b>&#060;b&#062;</b>(Bold)</tt> &#8212; парный строчный дискриптор, который делает текст <b>жирным</b>.<br>
-    <tt><b>&#060;i&#062;</b>(Italic)</tt> &#8212; парный строчный дискриптор, который делает текст <i>курсивным</i>.<br>
-    <tt><b>&#060;u&#062;</b>(Underline)</tt> &#8212; парный строчный дискриптор, который делает текст <u>подчеркнутым</u>.<br>
-    <tt><b>&lt;tt&gt;</b>(TbirTbir)</tt> &#8212; парный строчный дискриптор, который делает текст <tt>Мрножирным</tt>.<br>
+    <code><b>&#060;p&#062;</b>(Paragraph)</code> &#8212; парный блочный дискриптор, который показывает начало и конец абзаца.<br>
+    <code><b>&#060;b&#062;</b>(Bold)</code> &#8212; парный строчный дискриптор, который делает текст <b>жирным</b>.<br>
+    <code><b>&#060;i&#062;</b>(Italic)</code> &#8212; парный строчный дискриптор, который делает текст <i>курсивным</i>.<br>
+    <code><b>&#060;u&#062;</b>(Underline)</code> &#8212; парный строчный дискриптор, который делает текст <u>подчеркнутым</u>.<br>
+    <code><b>&lt;tt&gt;</b>(TbirTbir)</code> &#8212; парный строчный дискриптор, который делает текст <tt>Мрноширным</tt>.<br>
 
     <hr>
     <h2>Дескрипторы физического форматирования</h2>
