--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     <p>Являются аналогами физического форматирования, но лучше анализируются поисковыми машинами</p>
     <tt><b>&#060;strong&#062;</b>(Bold)</tt> &#8212; парный строчный дискриптор, который делает текст <strong>жирным</strong>.<br>
     <tt><b>&#060;em&#062;</b>(Emphasize)</tt> &#8212; парный строчный дискриптор, который делает текст <em>курсивным</em>.<br>
-    <tt><b>&lt;code&gt;</b>(TbirTbir)</tt> &#8212; парный строчный дискриптор, который делает текст <code>Мрножирным</code>.<br>
+    <tt><b>&lt;code&gt;</b>(TbirTbir)</tt> &#8212; парный строчный дискриптор, который делает текст <code>Моноширным</code>.<br>
 </body>
 </html>
